@@ -22,6 +22,7 @@ public class RevisionObservableImplTest extends TestCase implements RevisionObse
     instanceConfiguration.setInstanceName("defaultsvn");
     instanceConfiguration.setCacheUsed(true);
     applicationConfiguration.addInstanceConfiguration(instanceConfiguration);
+    applicationConfiguration.setConfigured(true);
 
     final ObjectCache cache = createMemoryCache();
 
@@ -29,6 +30,7 @@ public class RevisionObservableImplTest extends TestCase implements RevisionObse
       final List<RevisionObserver> observers = new ArrayList<RevisionObserver>();
       observers.add(this);
       final RevisionObservableImpl revisionObservable = new RevisionObservableImpl(observers);
+      revisionObservable.setMaxRevisionCountPerUpdate(3);
       revisionObservable.setConfiguration(applicationConfiguration);
       revisionObservable.setRepositoryService(new RepositoryServiceImpl());
       assertFalse(revisionObservable.isUpdating());
@@ -40,24 +42,35 @@ public class RevisionObservableImplTest extends TestCase implements RevisionObse
 
   @SuppressWarnings({"unchecked"})
   public void update(Observable o, Object arg) {
-    assertEquals(1, ((List<SVNLogEntry>) arg).size());
+    //This method will be called twice, with an update containing 3 revisions both times.
+    assertEquals(3, ((RevisionUpdate) arg).getRevisions().size());
   }
 
   public void update(final RevisionUpdate revisionUpdate) {
   }
 
   class TestRepository extends SVNRepositoryStub {
+    private boolean firstTime = true;
     public TestRepository() throws SVNException {
       super(SVNURL.parseURIDecoded("http://localhost/"), null);
     }
 
     public long log(String[] targetPaths, long startRevision, long endRevision, boolean changedPath, boolean strictNode, long limit, ISVNLogEntryHandler handler) throws SVNException {
-      handler.handleLogEntry(new SVNLogEntry(new HashMap<String, SVNLogEntryPath>(), 124, "jesper", new Date(), "Log message for revision 124."));
+      if (firstTime) {
+        handler.handleLogEntry(new SVNLogEntry(new HashMap<String, SVNLogEntryPath>(), 1, "jesper1", new Date(), "Log message for revision 1."));
+        handler.handleLogEntry(new SVNLogEntry(new HashMap<String, SVNLogEntryPath>(), 2, "jesper2", new Date(), "Log message for revision 2."));
+        handler.handleLogEntry(new SVNLogEntry(new HashMap<String, SVNLogEntryPath>(), 3, "jesper3", new Date(), "Log message for revision 3."));
+        firstTime = false;
+      } else {
+        handler.handleLogEntry(new SVNLogEntry(new HashMap<String, SVNLogEntryPath>(), 4, "jesper4", new Date(), "Log message for revision 4."));
+        handler.handleLogEntry(new SVNLogEntry(new HashMap<String, SVNLogEntryPath>(), 5, "jesper5", new Date(), "Log message for revision 5."));
+        handler.handleLogEntry(new SVNLogEntry(new HashMap<String, SVNLogEntryPath>(), 6, "jesper6", new Date(), "Log message for revision 6."));
+      }
       return 1;
     }
 
     public long getLatestRevision() throws SVNException {
-      return 124;
+      return 6;
     }
   }
 
